k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goflow
  namespace: goflow
spec:
  replicas: 2

  selector:
    matchLabels:
      app: goflow

  template:
    metadata:
      labels:
        app: goflow

    spec:
      serviceAccountName: goflow
      automountServiceAccountToken: false

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: goflow

          image: ghcr.io/shauryan10/goflow:fbd735f9b9cb7da01c4e7fe65fc50896aaa6d7ed
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001

            readOnlyRootFilesystem: true

            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 8080
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
