k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goflow
  namespace: goflow

spec:
  type: ClusterIP

  selector:
    app: goflow

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
